[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = [
    "cryptography",
    "authentication",
    "no-std",
    "algorithms",
]
description = """BLS signature implementation according to the IETF spec on the BLS12-381 curve."""
documentation = "https://docs.rs/blsful"
edition = "2021"
homepage = "https://github.com/mikelodder7/blsful"
keywords = ["crypto", "signature", "signing", "bls"]
license = "MIT OR Apache-2.0"
name = "blsful"
readme = "README.md"
repository = "https://github.com/mikelodder7/blsful"
version = "2.4.3"

[features]
default = ["blst"]
rust = ["bls12_381_plus/alloc"]
blst = ["blstrs_plus"]

[dependencies]
anyhow = "1.0"
arrayref = "0.3"
bls12_381_plus =  { version = "0.8", optional = true }
blstrs_plus = { version = "0.8", optional = true}
hex = "0.4"
hkdf = { version = "0.12", default-features = false }
merlin = "3"
pairing = "0.23"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.5", default-features = false }
thiserror = "1.0"
uint-zigzag = { version = "0.2", features = ["std"] }
vsss-rs = { version = "3", default-features = false, features = ["std"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
rstest = "0.18"
rand_xorshift = "0.3"
serde_bare = "0.5"
serde_json = "1.0"
